kubernetes/demo/hi_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hi-ingress
spec:
  rules:
    - host: hi.stijnheymans.net
      http:
        paths:
          - path: /
            backend:
              serviceName: hi-service
              servicePort: 80
